# entity-mapper

./: pyproject.toml  tox.ini
src/entity_mapper/: bm_metered_vol_agg.py  bmus.py  filter_on_aggregate_data.py  filter_on_bmu_meta_data.py  main.py  match_meta_data.py  regos_analysis.py  summarise_and_score.py  utils.py  validate_mappings.py
src/entity_mapper/data/: bmus.py  regos.py
tests/: test_main.py
