[project]
name = "entity-mapper"
version = "0.1.0"
description = "Map entities across datasets"
authors = [
    {name = "Joe Kwiatkowski", email = "joe@matched.energy"},
]
dependencies = ["pandas>=2.2.3", "click>=8.1.8", "pyyaml>=6.0.2"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "tox-pdm>=0.7.2",
    "tox>=4.23.2",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "pytest-randomly>=3.16.0",
    "pandas-stubs>=2.2.3.241126",
    "types-python-dateutil>=2.9.0.20241206",
    "types-PyYAML>=6.0.12.20241230",
]

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"tests/**" = [
    "S101", # Use of `assert` detected
    "D103", # Missing docstring in public function
]

[tool.mypy]
mypy_path=["src"]
disallow_untyped_defs = true # Functions need to be annotated
warn_unused_ignores = true
exclude = [
    "venv.*/",
    "build/",
    "dist/",
]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../elexon-s0142#egg=elexon-s0142",
]

[tool.pdm.scripts]
mypy = "mypy src tests"
ruff = "ruff format src tests"
tests = "pytest"
